# PymRMRe

./: .gitignore  LICENSE  MANIFEST.in  MrmreData.py  MrmreFilter.py  MrmrpyData.py  MrmrpyFilter.py  README.md  __init__.py  configure.ac  constants.py  mrmr.py  mrmrpy.py  pyproject.toml  setup.py  test.py
.github/workflows/: pythonpackage.yml
data/: cgps.feather  cgps_ge.csv  clinical_info.csv
expt/: Data.cpp  MutualInformationMatrix.cpp  expt.pyx
pymrmre/: .gitignore  LICENSE  MANIFEST.in  MrmreData.py  MrmreFilter.py  README.md  __init__.py  cexpt.pxd  expt.pyx  mrmr.py  setup.py
pymrmre/cymrmre/src/: Math.cpp  Matrix.cpp  exports.cpp  expt.cpp
pymrmre/expt/: Data.cpp  Data.h  Filter.cpp  Filter.h  Math.h  MathExtensions.cpp  Matrix.h  exports.cpp  exports.h  expt.cpp  expt.pyx
pymrmre/pymrmre/: MrmreData.py  MrmreFilter.py  mrmr.py
src/: Data.cpp  Data.h  Filter.cpp  Filter.h  exports.cpp  exports.h  expt.cpp  expt.pyx  setup.py
test/: dum.cpp  dum.pyx  dummy.cpp  dummy.h  exports.cpp  exports.h  setup.py  test_pymrmre.py
tests/: test_pymrmre.py
